2007-09-18  Ville Vainio  <vivainio@gmail.com>

	* genutils.py(make_quoted_expr): Do not use Itpl, it does
        not support unicode at the moment. Fixes (many) magic calls with
        special characters.

2007-09-14  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/genutils.py (doctest_reload): expose the doctest
	reloader to the user so that people can easily reset doctest while
	using it interactively.  Fixes a problem reported by Jorgen.

	* IPython/iplib.py (InteractiveShell.__init__): protect the
	FakeModule instances used for __main__ in %run calls from
	deletion, so that user code defined in them isn't left with
	dangling references due to the Python module deletion machinery.
	This should fix the problems reported by Darren.

2007-09-10  Darren Dale  <dd55@cornell.edu>

        * Cleanup of IPShellQt and IPShellQt4

2007-09-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/FakeModule.py (FakeModule.__init__): further fixes for
	doctest support.  

	* IPython/iplib.py (safe_execfile): minor docstring improvements.

2007-09-08  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (%pushd, %popd, %dirs): Fix dir stack - push *current*
	directory, not the target directory.

	* ipapi.py, Magic.py, iplib.py: Add ipapi.UsageError, a lighter weight
	exception that won't print the tracebacks. Switched many magics to
	raise them on error situations, also GetoptError is not printed
	anymore.

2007-09-07  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: do not auto-alias "dir", it screws up other dir auto
        aliases.

	* genutils.py: SList.grep() implemented.
        
	* ipy_editors.py, UserConfig/ipy_user_conf.py: Add some editors
	for easy "out of the box" setup of several common editors, so that
	e.g. '%edit os.path.isfile' will jump to the correct line
	automatically. Contributions for command lines of your favourite
	editors welcome.
        
2007-09-07  Fernando Perez  <Fernando.Perez@colorado.edu>
